<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btPesquisa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="56dp"
        android:onClick="actPesquisa"
        android:text="@string/btPesquisa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btTelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="actTelefone"
        android:text="@string/btTelefone"
        app:layout_constraintStart_toStartOf="@+id/btPesquisa"
        app:layout_constraintTop_toBottomOf="@+id/btPesquisa" />

    <Button
        android:id="@+id/btEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="actEmail"
        android:text="@string/btEmail"
        app:layout_constraintStart_toStartOf="@+id/btTelefone"
        app:layout_constraintTop_toBottomOf="@+id/btTelefone" />
</androidx.constraintlayout.widget.ConstraintLayout>